# math

./: .gitignore  CMakeLists.txt  README.md  binding.gyp  build.py  genproj.bat  gyp.bat  math.gyp  math.sln  math.vcxproj  package.json
include/math/: euler_angles.hpp  math.hpp  matrix.hpp  noise.hpp  orientation_vectors.hpp  quaternion.hpp  vector2.hpp  vector3.hpp  vector4.hpp
src/: euler_angles.cpp  math.cpp  math.euler_angles.cpp  math.euler_angles.hpp  math.hpp  math.matrix.cpp  math.matrix.hpp  math.noise.cpp  math.noise.hpp  math.orientation_vectors.cpp  math.orientation_vectors.hpp  math.quaternion.cpp  math.quaternion.hpp  math.vector.cpp  math.vector.hpp  math.vector2.hpp  math.vector3.hpp  math.vector4.hpp  matrix.cpp  noise.cpp  orientation_vectors.cpp  quaternion.cpp
